--- a/report.tex
+++ b/report.tex
@@ -19,38 +19,46 @@ Spaces exist at varying scales; hence the systems which recognize and preserve t
 
 We can summarize the main thesis of the chapter as follows: the most effective forces of power employ institutionalised hegemonic control to assert and preserve their power and furthermore, landscapes offer us expressions of these processes. The authors explore this thesis by examining cases of landscapes imbued with power relationships of nationhood, capital, class, race, gender, and intersections of these. These examples provide concrete evidence in attestation to the power of the relationships presented and the effectiveness of the hegemonic craft.
 
-We must first address what rights are implied by ownership of space. These vary depending on the scale and context of the space. Speaking to land ownership, Charles Geisler characterizes property rights as ``often involv[ing] \ldots the privilege to use property, the right to exlude nonowners, the power to transfer property, and immunity from nonconsesual harm or loss''. However, there are typically disclaimers on such rights: the types of buildings one can erect on an owned plot of land are subject to regionalized safety standards and zoning laws.  As another example, the rights to adorn the space of one's own body are also regionally limited: in Saudi Arabia, it is compulsory by law for women to cover their faces by niqab in many sacred places; conversely, the Belgian city of Maaseik in 2004 has criminalized the wearing of niqabs and burqas. Hence, it is accurate to say that rights associated with the ownership of space are typically subject to regional discretion.
+We must first address what rights are implied by ownership of space. These vary depending on the scale and context of the space. Speaking to land ownership, Charles Geisler characterizes property rights as ``often involv[ing] \ldots the privilege to use property, the right to exlude nonowners, the power to transfer property, and immunity from nonconsesual harm or loss'' \autocite{geisler2000property}. However, there are typically disclaimers on such rights: the types of buildings one can erect on an owned plot of land are subject to regionalized safety standards and zoning laws.  As another example, the rights to adorn the space of one's own body are also regionally limited: in Saudi Arabia, it is compulsory by law for women to cover their faces by niqab in many sacred places; conversely, the Belgian city of Maaseik in 2004 has criminalized the wearing of niqabs and burqas. Hence, it is accurate to say that rights associated with the ownership of space are typically subject to regional discretion.
 
 Perhaps our most intimate physical space is that of the body. Most of our fellow primates would agree that this space is highly individual and if it must have a proprietor, the self is clearly the rightful one. This is not to say however, that this space is not at risk of invasion: slavery, sexual slavery, and assault are forces which would indeed commodify this most personal space and assign its proprietorship to another party. Many governments worldwide attempt to protect their citizens from being physically subjugated in such ways, and the United Nation's Universal Declaration of Human Rights clearly outlines the personal freedoms which would prohibit these forces. Hence, the United Nations and national governments are respectively the regulator and arbiters of ownership rights to the body.
 
 Expanding our scope to the space immediately surrounding the body, we consider the ownership of permanent shelter, and hence residential land. In the United States and Canada, privatized ownership of land is a central cultural value associated with Capitalist socio-economic ideals. The rights associated with land ownership were described previously; in particular, the power to exlude nonowners from use of the land is integral to a Western formula for home security. Thus far, the negative impacts of proprietorship are not clear: the protection of rights to the body and rights to security of homestead are indeed proponents of proprietary space.
 
-A second major type of property rights exist in the Western world: public ownership assigns the property rights Geisler spoke of to the state, and any rights that citizens have are entirely up to the discretion of the state. Public spaces are chiefly allocated to explicitly prevent private ownership. Examples of public property are parliamentary buildings, ecological reserves, national parks, and congregational centers. There is an apparent moral duality between public and private ownership: the private proprietor has limited obligation to consider nonowners' needs in their use of the land, while publicly owned land ought to serve a communal purpose. In essence, we can characterise public land as accountably owned private land, held to account by the constituents of the democracy. Geisler however suspects a false social dichotomy: ``some legal scholars, public officials, community development practitioners, and environmental activists believe that cleaving ownership into `public' and `private' is neither useful nor accurate.'' He proposes that new categories of ownership which reflect combinations of individual and community property interests are needed and are, indeed, emerging in other parts of the world. To more fully understand his point, we should examine the contest between private and public in a further expanded ring: social space.
+A second major type of property rights exist in the Western world: public ownership assigns the property rights Geisler spoke of to the state, and any rights that citizens have are entirely up to the discretion of the state. Public spaces are chiefly allocated to explicitly prevent private ownership. Examples of public property are parliamentary buildings, ecological reserves, national parks, and congregational centers. There is an apparent moral duality between public and private ownership: the private proprietor has limited obligation to consider nonowners' needs in their use of the land, while publicly owned land ought to serve a communal purpose. In essence, we can characterise public land as accountably owned private land, held to account by the constituents of the democracy. Geisler however suspects a false social dichotomy: ``some legal scholars, public officials, community development practitioners, and environmental activists believe that cleaving ownership into `public' and `private' is neither useful nor accurate'' \autocite{geisler2000property}. He proposes that new categories of ownership which reflect combinations of individual and community property interests are needed and are, indeed, emerging in other parts of the world. To more fully understand his point, we should examine the contest between private and public in a further expanded ring: social space.
 
 It is clear that shared land does not neatly fit into the paradigm of sole proprietorship, which is largely the reason public spaces exist; however, Winchester, Kong, Dunn identify a trend of transferring social space to the private sector:
 \begin{quote}
 control of social space has been transferred from the public to the private sector \ldots large new building complexes belonging to banks, insurance and property companies, multinational corporations and the like, are encouraged to create and donate `public space' at ground or podium level and, in turn, these spaces are given back to private ownership, in that use of the space is controlled privately.
+
+\autocite{winchester2013landscapes}
 \end{quote}
 It is clear from this perspective that privately-owned commodified land enables imbalances of power: in particular, the right to eject nonowners (e.g. protestors, homeless persons) under sole discretion of the proprietor can serve only the interests of the corporations which own these `public spaces', even when the effects of their actions are deemed detrimental to societal fabric (e.g. prohibition of free speech, free assembly). Geisler offers the concept of ``nuisance doctrine'' to deal with these abuses of rights:
 \begin{quote}
 Nuisance doctrine expressly qualifies property rights by reference to their effects on other property owners and on the public at large. It is premised on the notion that any action, if taken to the extreme, may become unlawful. \ldots The same activity may or may not be lawful depending on where it is undertaken and the effects it causes. \ldots The right to exclude is limited, for example, by public accomodations law. \ldots the scope and the extent of property rights are dependent on the effects that the exercise of those rights has on other people.
+
+\autocite{geisler2000property}
 \end{quote}
 
 We see that when we expand our scope to the landscapes of shared space, conflicts of interest arise and need resolution. Classical sole proprietorship of land statically upholds a single party's property rights throughout time regardless of the negative impacts on shared space it might produce. Our tendency is so much to protect ownership of unowned land that individuals who are unable to own land are liable to be ejected from whatever ground on which they stand! Lynton K. Caldwell criticizes the conventional concept of ownership:
 \begin{quote}
 Were the prevailing legal concepts of land ownership in the United States not already established, it is highly improbable that any similar body of doctrine would develop \ldots The existing aggregation of laws and practices pertaining to land ownership and use are beneficial primarily to persons interested in exploitation or litigation. They provide little protection to the owner who lacks continuous economic and legal counsel and who is unable personally to influence political decisions. Moreover, the laws are even less helpful to communities and the general public in maintaining or restoring the quality of the environment.
+
+\autocite{caldwell1973rights}
 \end{quote}
-The classical concept of ownership is based on John Locke's theory that labor should create property rights. Overlooked however, is Locke's qualification on this relationship: ``at least where there is enough and as good left in common for others''. It cannot be overstated that the current state of the art of proprietorship ignores this provision, particularly because it is exacerbated by a juggernaut of consumerism.
+The classical concept of ownership is based on John Locke's theory that labor should create property rights. Overlooked however, is Locke's qualification on this relationship: ``at least where there is enough and as good left in common for others'' \autocite{locke1965two}. It cannot be overstated that the current state of the art of proprietorship ignores this provision, particularly because it is exacerbated by a juggernaut of consumerism.
 
-Winchester, Kong, Dunn recognize that ``when hegemonic control is successful, the social order endorsed by the political elite is, at the same time, the social order that the masses desire.'' Surely the masses wouldn't desire the types of power imbalances of which I speak. On the contrary however, the masses are in a constant struggle to uphold proprietorship and hence corporate power. This is a by-product of a culture of mass-marketing, symbol appropriating corporations and their consumer base. This leads to the final space for consideration, the mind.
+Winchester, Kong, Dunn recognize that ``when hegemonic control is successful, the social order endorsed by the political elite is, at the same time, the social order that the masses desire'' \autocite{winchester2013landscapes} Surely the masses wouldn't desire the types of power imbalances of which I speak. On the contrary however, the masses are in a constant struggle to uphold proprietorship and hence corporate power. This is a by-product of a culture of mass-marketing, symbol appropriating corporations and their consumer base. This leads to the final space for consideration, the mind.
 
-Ellen Semple plainly wrote in her Influences of Geographic Environment, that ``Man is a product of the earth's surface''. Carl Sauer refined this idea into that of Cultural determinism: that man is a product of his culture. The two theories of evolution of identity share the philosophical premise that man's way of life is shaped by external, preexisting factors. In either case, we can examine landscapes as having a direct influence on human ways of life. The western world is full of landscapes which are chock-full of appropriated and marketed symbols by the corporate world to persuade the masses into ways of acting and thinking. This (sometimes not so) subtle control over peoples' minds is the key to consumerist hegemony. It is the linchpin of corporate power and its subjugation of the masses. Hence, there is a hegemonic power structure which augments the wealth of the wealthy proprietor and disregards the rights of those with less. 
+Ellen Semple plainly wrote in her Influences of Geographic Environment, that ``Man is a product of the earth's surface'' \autocite{semple1911influences}. Carl Sauer refined this idea into that of Cultural determinism: that man is a product of his culture. The two theories of evolution of identity share the philosophical premise that man's way of life is shaped by external, preexisting factors. In either case, we can examine landscapes as having a direct influence on human ways of life. The western world is full of landscapes which are chock-full of appropriated and marketed symbols by the corporate world to persuade the masses into ways of acting and thinking. This (sometimes not so) subtle control over peoples' minds is the key to consumerist hegemony. It is the linchpin of corporate power and its subjugation of the masses. Hence, there is a hegemonic power structure which augments the wealth of the wealthy proprietor and disregards the rights of those with less. 
 
 While ownership of space is a commonly accepted socio-economic philosophy in the Western world, its implementation serves the proprietor above all, and in particular above individuals marginalized by current power relationships. Hence, it further reinforces social power imbalances which are evident in spaces of large enough scale. The disparities between rich and poor are furthermore sustained by consumerist hegemonic control, and the problems with such power imbalances exacerbated. This leads to the conclusion that our widely-held ideals of ownership of space are inherently flawed in their ignorance of social equality.
 
 
 \begin{quote}
 No man is an Iland, intire of it selfe; every man is a peece of the Continent, a part of the maine; if a Clod bee washed away by the Sea, Europe is the lesse, as well as if a Promontorie were, as well as if a Mannor of thy friends or of thine owne were; any mans death diminishes me, because I am involved in Mankinde; And therefore never send to know for whom the bell tolls; It tolls for thee.
+
+\autocite{donne1975devotions}
 \end{quote}
 
 \clearpage
