--- a/report.tex
+++ b/report.tex
@@ -33,7 +33,7 @@ control of social space has been transferred from the public to the private sect
 
 \autocite{winchester2013landscapes}
 \end{quote}
-It is clear from this perspective that privately-owned commodified land enables imbalances of power: in particular, the right to eject nonowners (e.g. protestors, homeless persons) under sole discretion of the proprietor can serve only the interests of the corporations which own these `public spaces', even when the effects of their actions are deemed detrimental to societal fabric (e.g. prohibition of free speech, free assembly). Geisler offers the concept of ``nuisance doctrine'' to deal with these abuses of rights:
+It is clear from this perspective that privately-owned commodified land enables imbalances of power: the right to eject nonowners (e.g. protestors, homeless persons) under sole discretion of the proprietor can serve only the interests of the corporations which own these `public spaces', even when the effects of their actions are deemed detrimental to societal fabric (e.g. prohibition of free speech, free assembly). Geisler offers the concept of ``nuisance doctrine'' to deal with these abuses of rights:
 \begin{quote}
 Nuisance doctrine expressly qualifies property rights by reference to their effects on other property owners and on the public at large. It is premised on the notion that any action, if taken to the extreme, may become unlawful. \ldots The same activity may or may not be lawful depending on where it is undertaken and the effects it causes. \ldots The right to exclude is limited, for example, by public accomodations law. \ldots the scope and the extent of property rights are dependent on the effects that the exercise of those rights has on other people.
 
